<resources>
    <string name="app_name">Kids Online</string>
    <string name="home_page">Trang chủ</string>
    <string name="label_feature">Tính năng</string>
    <string name="label_noti">Thông báo</string>
    <string name="label_account">Tài khoản</string>
    <string name="label_info_of">Bạn đang xem thông tin của</string>
    <string name="label_fast_utility">Tiện ích nhanh</string>
    <string name="label_edit">Chỉnh sửa</string>
    <string name="label_donve">Đón về</string>
    <string name="label_leave">Xin nghỉ</string>
    <string name="label_index">Chỉ số</string>
    <string name="important">Quan trọng</string>
    <string name="label_news_feed">Bảng tin</string>
    <string name="see_all_news">Xem tất cả tin tức</string>
    <string name="make_a_phone_call">Make a phone call</string>
    <string name="school_name">Trường mầm non Hoạ Mi</string>
    <string name="absence">Xin nghỉ</string>
    <string name="view_all_day">Xem tất cả các ngày</string>
    <string name="confirm">Xác nhận</string>
    <string name="label_message">Lời nhắn</string>
    <string name="label_danthuoc">Dặn thuốc</string>
    <string name="label_activity_daily">Hoạt động ngày</string>
    <string name="label_news">Tin tức</string>
    <string name="label_album_picture">Album ảnh</string>
    <string name="label_fee">Học phí</string>
    <string name="label_survey">Khảo sát</string>
    <string name="label_comment">Nhận xét định kì</string>
    <string name="label_feature_pinned">Tiện ích đã ghim</string>
    <string name="label_feature_all">Tất cả tiện ích</string>
    <string name="label_message_1">Tin nhắn</string>
    <string name="label_newest">Mới nhất</string>
    <string name="xinChaoText">Xin chào!</string>
    <string name="hintUserLoginText">Mã số HS của bé</string>
    <string name="hintPassLoginText">Mật khẩu</string>
    <string name="savePassText">Lưu mật khẩu</string>
    <string name="forgotPassText">Quên mật khẩu?</string>
    <string name="loginText">Đăng nhập</string>
    <string name="tongDaiText">Tổng đài hỗ trợ 1900 1010</string>
    <string name="versionText">Phiên bản 1.0.0</string>
    <string name="infoText">Ứng dụng dành cho phụ huynh</string>
    <string name="parentText">Phụ huynh bé</string>
    <string name="label_setting">Cài đặt</string>
    <string name="label_activity">Hoạt động</string>
    <string name="unpaidStatus">Chưa thanh toán</string>
    <string name="paidStatus">Đã thanh toán</string>
    <string name="totalFeeLabel">Tổng số tiền</string>
    <string name="debtLabel">Dư nợ</string>
    <string name="deadlineLabel">Hạn nộp</string>
    <string name="logoutLabel">Đăng xuất</string>
    <string name="reminderLabel">Vui lòng hoàn tất việc thanh toán học phí trước hạn\n(08/12/2022)</string>
    <string name="reminderPaidLabel">Đã xác nhận thanh toán vào lúc 17:11, Ngày 05/09/2022</string>
    <string name="detailContent">Mọi thông tin liên quan đến học phí, hạn nộp và hình thức thanh toán hoặc các yêu cầu hỗ trợ khác vui lòng liên hệ hotline 024.112.315 (Ban Quản Lý Nhà Trường) để được biết thêm chi tiết.</string>
    <string name="feeNameDetailLabel">Chi tiết %s</string>
    <string name="infoChildren">Thông tin của bé</string>
    <string name="infoParent">Thông tin phụ huynh</string>
    <string name="editIcon">Sửa</string>
    <string name="dateOfBirthLabel">Ngày sinh</string>
    <string name="nicknameLabel">Biệt danh</string>
    <string name="maleLabel">Giới tính</string>
    <string name="schoolLabel">Trường</string>
    <string name="classLabel">Lớp</string>
    <string name="parentNameLabel">Họ tên</string>
    <string name="addressLabel">Địa chỉ</string>
    <string name="emailLabel">Email</string>
    <string name="phoneLabel">Điện thoại</string>
    <string name="remindText">Cài đặt nhắc nhở</string>
    <string name="donDonText">Đơn đón</string>
    <string name="nguoiDuaDonText">Người đưa đón</string>
    <string name="historyText">Lịch sử</string>
    <string name="taoDonText">Tạo đơn</string>
    <string name="donDungGioText">Đón đúng giờ</string>
    <string name="donSomText">Đón sớm</string>
    <string name="donMuonText">Đón muộn</string>
    <string name="lessText">&lt;</string>
    <string name="moreText">&gt;</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_new_mess">Tạo lời nhắn mới</string>
    <string name="hint_search_receiver">Tìm người nhận tin nhắn</string>
    <string name="no_data">Không có dữ liệu</string>
    <string name="label_absence_cophep">Nghỉ có phép</string>
    <string name="label_absence_khong_phep">Nghỉ không phép</string>
    <string name="label_absence_di_muon">Đi muộn</string>
    <string name="absence_pending">Chờ xác nhận</string>
    <string name="absence_approved">Đã xác nhận</string>
    <string name="hint_absence_reason">Nhập lý do xin nghỉ</string>
    <string name="label_absence_day_number">Ngày xin nghỉ (%s)</string>
    <string name="create_donxin_nghi">Tạo đơn xin nghỉ</string>
    <string name="create_absence_success">Đã gửi thành công!\nĐang chờ nhà trường xác nhận</string>
    <string name="update">Cập nhật</string>
    <string name="tvChangePassword">Đổi mật khẩu</string>
    <string name="tvNoteChangePass">Để đảm bảo an toàn, mật khẩu nên bao gồm ít nhất 8 kí tự trong đó có tối thiểu 1 chữ số, 1 chữ viết hoa và 1 kí tự đặc biệt!</string>
    <string name="label_medicine_note">Ghi chú dặn thuốc</string>
    <string name="label_view_detail">Xem chi tiết</string>
    <string name="confirm_delete_desc">Bạn chắc chắn muốn xóa dặn thuốc này?</string>
    <string name="cancel">Hủy</string>
    <string name="delete">Xóa</string>
    <string name="label_add_medicine">Thêm thuốc</string>
    <string name="label_danthuoc_create">Tạo dặn thuốc</string>
    <string name="login_expired">Phiên hết hạn.\nVui lòng đăng nhập lại!</string>
    <string name="label_close">Đóng</string>
    <string name="label_continue">Tiếp tục</string>
    <string name="agree">Đồng ý</string>
    <string name="back">Quay lại</string>
    <string name="label_save_nguoidon">Lưu người đón</string>
    <string name="hint_name_nguoi_don">Nhập tên của người đưa đón</string>
    <string name="err_mess">Có lỗi xảy ra!</string>
    <string name="create_homie_success">Thêm người đón thành công!</string>
    <string name="reasonDetail">Lí do: %s</string>
    <string name="schoolConfirmed">Đã được Nhà trường xác nhận nghỉ lúc \n%s, ngày %s</string>
</resources>