<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_bg_login"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/imvKid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_60"
        android:background="@drawable/ic_kids_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imvOnline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_online_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvKid" />

    <ImageView
        android:id="@+id/imvAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_45"
        android:background="@drawable/ic_default_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvOnline" />

    <TextView
        android:id="@+id/tvParent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_12"
        android:text="@string/parentText"
        android:textColor="@color/gray_232323"
        android:textSize="@dimen/text_size_18"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvAvatar" />

    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_4"
        android:text="@string/xinChaoText"
        android:textColor="@color/gray_232323"
        android:textSize="@dimen/text_size_24"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvParent" />

    <EditText
        android:id="@+id/edtUser"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_40"
        android:layout_marginTop="@dimen/size_24"
        android:background="@drawable/bg_edittext_selector"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="@dimen/size_8"
        android:hint="@string/hintUserLoginText"
        android:maxLines="1"
        android:padding="@dimen/size_12"
        android:textColor="@color/color_000000"
        android:textColorHint="@color/color_993C3C43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHello" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="@dimen/size_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/size_40"
        android:layout_marginTop="@dimen/size_12"
        android:background="@drawable/bg_edittext_selector"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="@dimen/size_8"
        android:hint="@string/hintPassLoginText"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingVertical="@dimen/size_12"
        android:paddingStart="@dimen/size_12"
        android:paddingEnd="@dimen/size_40"
        android:textColor="@color/color_000000"
        android:textColorHint="@color/color_993C3C43"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtUser" />

    <ImageButton
        android:id="@+id/btnEyes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_12"
        android:background="@drawable/ic_eye_blind"
        app:layout_constraintBottom_toBottomOf="@id/edtPass"
        app:layout_constraintEnd_toEndOf="@id/edtPass"
        app:layout_constraintTop_toTopOf="@id/edtPass" />

    <CheckBox
        android:id="@+id/checkboxSavePass"
        android:layout_width="@dimen/size_20"
        android:layout_height="@dimen/size_20"
        android:layout_marginTop="@dimen/size_14"
        android:button="@drawable/bg_checkbox_selector"
        android:checked="true"
        app:layout_constraintStart_toStartOf="@id/edtPass"
        app:layout_constraintTop_toBottomOf="@id/edtPass" />

    <TextView
        android:id="@+id/tvSavePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_6"
        android:text="@string/savePassText"
        android:textColor="@color/gray_4F4F4F"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toBottomOf="@id/checkboxSavePass"
        app:layout_constraintStart_toEndOf="@id/checkboxSavePass"
        app:layout_constraintTop_toTopOf="@id/checkboxSavePass" />

    <TextView
        android:id="@+id/tvForgotPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgotPassText"
        android:textColor="@color/color_0066FF"
        android:textSize="@dimen/text_size_15"
        app:layout_constraintBottom_toBottomOf="@id/checkboxSavePass"
        app:layout_constraintEnd_toEndOf="@id/edtPass"
        app:layout_constraintTop_toTopOf="@id/checkboxSavePass" />

    <TextView
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_34"
        android:background="@drawable/bg_ff7917_radius_32"
        android:paddingHorizontal="@dimen/size_24"
        android:paddingVertical="@dimen/size_12"
        android:text="@string/loginText"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkboxSavePass" />

    <TextView
        android:id="@+id/tvTongDai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_30"
        android:text="@string/tongDaiText"
        android:textColor="@color/gray_4F4F4F"
        android:textSize="@dimen/text_size_13"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_4"
        android:text="@string/versionText"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/text_size_13"
        app:layout_constraintBottom_toTopOf="@id/tvTongDai"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/size_4"
        android:text="@string/infoText"
        android:textColor="@color/color_000000"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/tvVersion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <FrameLayout
        android:id="@+id/progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:background="#97000000">
        <ProgressBar
            android:layout_width="@dimen/size_50"
            android:layout_height="@dimen/size_50"
            android:layout_gravity="center"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>