<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    
        <View
            android:layout_width="@dimen/size_12"
            android:layout_height="@dimen/size_12"
            android:background="@drawable/bg_absence_cophep"/>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4"
            android:text="@string/label_absence_cophep"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/gray_828282"/>

        <View
            android:layout_width="@dimen/size_12"
            android:layout_height="@dimen/size_12"
            android:layout_marginStart="@dimen/size_8"
            android:background="@drawable/bg_absence_khong_phep"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4"
            android:text="@string/label_absence_khong_phep"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/gray_828282"/>

        <View
            android:layout_width="@dimen/size_12"
            android:layout_height="@dimen/size_12"
            android:layout_marginStart="@dimen/size_8"
            android:background="@drawable/bg_absence_di_muon"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_4"
            android:text="@string/label_absence_di_muon"
            android:textSize="@dimen/text_size_13"
            android:textColor="@color/gray_828282"/>
        
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>