<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="@dimen/size_16"
    android:paddingVertical="@dimen/size_21"
    tools:context=".ui.fragment.feature.donve.DonVeFragment">

    <TextView
        android:id="@+id/tvDonVeHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_left_arrow"
        android:drawablePadding="@dimen/size_8"
        android:text="@string/label_donve"
        android:textColor="@color/gray_232323"
        android:textSize="@dimen/text_size_20"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvRemind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remindText"
        android:textColor="@color/blue_005CC8"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/tabLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_50"
        android:layout_marginTop="@dimen/size_12"
        android:background="@drawable/bg_fffaf4_radius_40"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDonVeHeader" />

    <TextView
        android:id="@+id/tvDonDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_8"
        android:layout_marginTop="@dimen/size_8"
        android:background="@drawable/bg_tab_selected"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingVertical="@dimen/size_8"
        android:paddingHorizontal="@dimen/size_20"
        android:text="@string/donDonText"
        android:textColor="@color/color_tab_selector"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvNguoiDon"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="@id/tabLayout"
        app:layout_constraintTop_toTopOf="@id/tabLayout" />

    <TextView
        android:id="@+id/tvNguoiDon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_tab_selected"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingVertical="@dimen/size_8"
        android:paddingHorizontal="@dimen/size_20"
        android:text="@string/nguoiDuaDonText"
        android:textColor="@color/color_tab_selector"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/tvHistory"
        app:layout_constraintStart_toEndOf="@id/tvDonDon"
        app:layout_constraintTop_toTopOf="@id/tvDonDon" />

    <TextView
        android:id="@+id/tvHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/size_8"
        android:background="@drawable/bg_tab_selected"
        android:gravity="center"
        android:includeFontPadding="false"
        android:maxLines="1"
        android:paddingVertical="@dimen/size_8"
        android:paddingHorizontal="@dimen/size_20"
        android:text="@string/historyText"
        android:textColor="@color/color_tab_selector"
        android:textIsSelectable="true"
        android:textSize="@dimen/text_size_15"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tabLayout"
        app:layout_constraintStart_toEndOf="@id/tvNguoiDon"
        app:layout_constraintTop_toTopOf="@id/tvDonDon" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/vpg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_0"
        android:layout_marginTop="@dimen/size_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>