<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/trans"
    android:paddingHorizontal="@dimen/size_16">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_boder_around"
        android:padding="@dimen/size_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Xác nhận xóa"
            android:textColor="@color/gray_232323"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_20"
            android:gravity="center"
            android:text="@string/confirm_delete_desc"
            android:textColor="@color/gray_828282"
            android:textSize="@dimen/text_size_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <View
            android:id="@+id/centerLineView"
            android:layout_width="@dimen/size_1"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitDesc" />

        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="@dimen/size_130"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_32"
            android:background="@drawable/ripple_clicked"
            android:gravity="center"
            android:paddingHorizontal="@dimen/size_32"
            android:paddingVertical="@dimen/size_8"
            android:text="@string/cancel"
            android:textColor="@color/gray_828282"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/centerLineView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitDesc" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="@dimen/size_130"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_32"
            android:background="@drawable/ripple_clicked"
            android:gravity="center"
            android:paddingHorizontal="@dimen/size_32"
            android:paddingVertical="@dimen/size_8"
            android:text="@string/delete"
            android:textColor="@color/orange_FF7917"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/centerLineView"
            app:layout_constraintTop_toBottomOf="@id/tvTitDesc" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>